Check the axiom I think?

--- a/lamport_clock/lamport_clock.cfg
+++ b/lamport_clock/lamport_clock.cfg
@@ -1,3 +1,6 @@
 SPECIFICATION Spec
 CONSTANT defaultInitValue = defaultInitValue
 \* Add statements after this line.
+CONSTANT Nproc = 3
+CONSTANT Steps = 8
+INVARIANT Causal
